package com._520.factorymethod;

/**
 *  工厂方法创建的对象的接口：日志
 */
public interface Log {

    void writeLog();
}
